# git-gifi

./: .gitignore  .travis.yml  README.md  README.rst  devenv.sh  index.html  params.json  pyproject.toml  setup.cfg  setup.py
gifi/: __init__.py  command.py  epic.py  feature.py  git_hub.py  main.py  queue.py  slack.py
gifi/internal/: configuration.py  git_utils.py
gifi/utils/: configuration.py  git_utils.py  ui.py
tests/: commands_test.py  feature_test.py  main_test.py  queue_test.py
tests/internal/: __init__.py  configuration_test.py  git_test.py
tests/resources/: expected_help.txt
tests/utils/: configuration_test.py  git_test.py  git_utils_test.py
